Correct sound icon z-index

--- a/projects/DigitPop-Player/src/app/video/video.component.scss
+++ b/projects/DigitPop-Player/src/app/video/video.component.scss
@@ -734,7 +734,7 @@
 .sound-status {
   opacity: 0.65;
   cursor: pointer;
-  z-index: 99;
+  z-index: 105;
   position: absolute;
   top: 30px;
   right: 30px;
